--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
@@ -35,8 +36,8 @@
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
