--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.114",
+    "@types/node": "^16.18.119",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
     "react": "^18.3.1",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.53.1",
