--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "https-browserify": "^1.0.0",
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.53.1",
