--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "dayjs": "^1.11.13",
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
+    "react-chartjs-2": "^5.2.0",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
